Update dependencies and fix stretch and update example

--- a/test/cases/example.css
+++ b/test/cases/example.css
@@ -3,10 +3,5 @@
 }
 
 .image {
-  background-image: url(image@1x.png);
-}
-@media (min-resolution: 2dppx) {
-  .image {
-    background-image: url(image@2x.png);
-  }
+  width: stretch;
 }
