--- a/test/cases/example.out.css
+++ b/test/cases/example.out.css
@@ -7,10 +7,7 @@
 }
 
 .image {
-  background-image: url(image@1x.png);
-}
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-  .image {
-    background-image: url(image@2x.png);
-  }
+  width: -webkit-fill-available;
+  width: -moz-available;
+  width: stretch;
 }
